<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="crud_app_name">CRUD Home</string>
    <string name="app_name">CRUD Login</string>
    <string name="action_settings">Settings</string>
    <string name="text_emailId">Email ID</string>
    <string name="text_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_exit">Exit</string>
    <string name="text_create">Create</string>
    <string name="text_update">Update</string>
    <string name="text_retrieve">Retrieve</string>
    <string name="text_retrieveAll">Retrieve All</string>
    <string name="text_delete">Delete</string>

</resources>